feat(SCRUM-36): Add invitation based registration
