# api/spec/openapi.yaml
@@ -73,7 +73,7 @@ paths:
       tags:
         - auth
       summary: Register a new user via invitation
-      description: Registers a new user based on the invitation token. If the user is a student, they will be redirected to accept the invitation.
+      description: Registers a new user based on the invitation token.
       parameters:
         - name: token
           in: query
@@ -243,10 +243,10 @@ paths:
                     - STUDENT
                     - INSTRUCTOR
                   example: 'STUDENT'
-                projectId:
+                teamId:
                   type: string
                   nullable: true
-                  example: 'project-abc123'
+                  example: 'team-abc123'
       responses:
         '200':
           description: Invitations sent successfully
@@ -254,87 +254,6 @@ paths:
           description: Bad request (missing required fields or incorrect type)
         '403':
           description: Unauthorized access (e.g., an instructor trying to invite another instructor)
-  /users/invite/accept:
-    post:
-      tags:
-        - users
-      summary: Accept an invitation
-      description: Accepts the invitation based on the provided token and adds the user to the relevant project or role.
-      security:
-        - authorization: []
-      parameters:
-        - name: token
-          in: query
-          required: true
-          schema:
-            type: string
-            example: 'invite-token-example'
-      responses:
-        '200':
-          description: Invitation accepted successfully
-        '403':
-          description: Invalid or expired invitation token
-        '400':
-          description: Bad request
-  /users/invite/{token}:
-    put:
-      tags:
-        - users
-      summary: Update an invite
-      description: Allows updating the invite’s details such as email or expiry date.
-      security:
-        - authorization: []
-      parameters:
-        - name: token
-          in: path
-          required: true
-          schema:
-            type: string
-            example: 'invite-token-example'
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                email:
-                  type: string
-                  example: 'invitee@example.com'
-                expiry:
-                  type: string
-                  format: date-time
-                  example: '2024-12-31T23:59:59Z'
-                status:
-                  type: string
-                  enum:
-                    - PENDING
-                    - ACCEPTED
-                  example: 'PENDING'
-      responses:
-        '200':
-          description: Invite updated successfully
-        '404':
-          description: Invite not found
-    delete:
-      tags:
-        - users
-      summary: Delete an invite
-      description: Deletes the invite by its token.
-      security:
-        - authorization: []
-      parameters:
-        - name: token
-          in: path
-          required: true
-          schema:
-            type: string
-            example: 'invite-token-example'
-      responses:
-        '204':
-          description: Invite deleted successfully
-        '404':
-          description: Invite not found
   /users/{id}:
     get:
       tags:
@@ -419,12 +338,13 @@ components:
       type: object
       properties:
         id:
-          type: integer
-          format: int64
-          example: 1
+          type: string
         email:
           type: string
           example: john@email.com
+        password:
+          type: string
+          description: Hash (String)
         displayName:
           type: string
           example: John Doe
@@ -434,49 +354,50 @@ components:
             - STUDENT
             - INSTRUCTOR
             - ADMIN
-        projects:
+        groups:
           type: array
           items:
-            type: object
-            properties:
-              id:
-                type: string
-                example: 'project-abc123'
+            type: string
+            description: "For an INSTRUCTOR - List of classes they teach. For a STUDENT - List of teams they are on"
+    Team:
+      type: object
+      properties:
+        id:
+          type: string
+          description: GUID (String)
+        name:
+          type: string
+        projectId:
+          type: string
+          description: GUID (String)
     Project:
       type: object
       properties:
         id:
           type: string
-          example: 'project-abc123'
-        projectName:
+          description: GUID (String)
+        name:
           type: string
-          example: 'Math 101'
-        instructorId:
+        classId:
           type: string
-          example: 'user-123'
-        expiresIn:
+          description: GUID (String)
+    JoyRating:
+      type: object
+      properties:
+        id:
+          type: string
+        userId:
+          type: string
+          description: GUID (String)
+        teamId:
+          type: string
+          description: GUID (String)
+        date:
           type: string
           format: date-time
-          example: '2024-12-31T23:59:59Z'
-        participants:
-          type: array
-          items:
-            type: object
-            properties:
-              email:
-                type: string
-                example: 'student@example.com'
-              status:
-                type: string
-                enum:
-                  - PENDING
-                  - ACTIVE
-                  - EXPIRED
-                example: 'PENDING'
-              token:
-                type: string
-                description: Only present if status is PENDING
-                example: 'invite-token-example'
+        rating:
+          type: integer
+          description: Int from 0-5
     AuthResponse:
       type: object
       properties:
